2011-08-27  Peter Beverloo  <peter@chromium.org>

        Teach the update and build scripts how to handle dependencies
        and cross-compiling rules for the Chromium port on OS(ANDROID).
        https://bugs.webkit.org/show_bug.cgi?id=66687

        Reviewed by Adam Barth.

        * gyp_webkit:

2011-08-26  Iain Merrick  <husky@google.com>

        [chromium] Add MockWebGraphicsContext3D, for compositor unit testing
        https://bugs.webkit.org/show_bug.cgi?id=67006

        MockWebGraphicsContext3D is a no-op implementation of the pure virtual
        interface WebGraphicsContext3D. I've included a test with a couple of
        example usages: subclassing it manually, and using it with GMock.

        Reviewed by Kenneth Russell.

        * WebKit.gypi:
        * tests/MockWebGraphicsContext3D.h: Added.
        (WebKit::MockWebGraphicsContext3D::initialize):
        (WebKit::MockWebGraphicsContext3D::makeContextCurrent):
        (WebKit::MockWebGraphicsContext3D::width):
        (WebKit::MockWebGraphicsContext3D::height):
        (WebKit::MockWebGraphicsContext3D::reshape):
        (WebKit::MockWebGraphicsContext3D::isGLES2Compliant):
        (WebKit::MockWebGraphicsContext3D::readBackFramebuffer):
        (WebKit::MockWebGraphicsContext3D::getPlatformTextureId):
        (WebKit::MockWebGraphicsContext3D::prepareTexture):
        (WebKit::MockWebGraphicsContext3D::synthesizeGLError):
        (WebKit::MockWebGraphicsContext3D::isContextLost):
        (WebKit::MockWebGraphicsContext3D::mapBufferSubDataCHROMIUM):
        (WebKit::MockWebGraphicsContext3D::unmapBufferSubDataCHROMIUM):
        (WebKit::MockWebGraphicsContext3D::mapTexSubImage2DCHROMIUM):
        (WebKit::MockWebGraphicsContext3D::unmapTexSubImage2DCHROMIUM):
        (WebKit::MockWebGraphicsContext3D::getRequestableExtensionsCHROMIUM):
        (WebKit::MockWebGraphicsContext3D::requestExtensionCHROMIUM):
        (WebKit::MockWebGraphicsContext3D::blitFramebufferCHROMIUM):