@@ -43,6 +43,17 @@ WebSerializedScriptValue WebSerializedScriptValue::fromString(const WebString& s
     return SerializedScriptValue::createFromWire(s);
 }
 
+#if WEBKIT_USING_V8
+WebSerializedScriptValue WebSerializedScriptValue::serialize(v8::Handle<v8::Value> value)
+{
+    bool didThrow;
+    WebSerializedScriptValue v = SerializedScriptValue::create(value, didThrow);
+    if (didThrow)
+      return createInvalid();
+    return v;
+}
+#endif
+
 WebSerializedScriptValue WebSerializedScriptValue::createInvalid()
 {
     return SerializedScriptValue::create();
@@ -62,6 +73,13 @@ WebString WebSerializedScriptValue::toString() const
 {
     return m_private->toWireString();
 }
+
+#if WEBKIT_USING_V8
+v8::Handle<v8::Value> WebSerializedScriptValue::deserialize()
+{
+    return m_private->deserialize();
+}
+#endif
 
 WebSerializedScriptValue::WebSerializedScriptValue(const PassRefPtr<SerializedScriptValue>& value)
     : m_private(value)
